--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,6 @@
   font-weight: 400;
   font-display: swap;
 }
-
 @font-face {
   font-family: "PT Sans";
   font-style: normal;
@@ -13,7 +12,6 @@
   src: url("../fonts/ptsans-700.woff2") format("woff2");
   font-display: swap;
 }
-
 body {
   font-family: "PT Sans", sans-serif;
   margin: 0;
@@ -21,21 +19,18 @@ body {
   line-height: 24px;
   background-color: #F2F2F2;
 }
-
 ul,
 ol {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-
 .img {
   display: block;
   width: 100%;
   max-width: 100%;
   height: auto;
 }
-
 .container {
   background-color: #FFFFFF;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
@@ -43,10 +38,7 @@ ol {
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
-
-
 }
-
 .page-header {
   position: relative;
   padding-left: calc(70px + 140px + 28px);
@@ -54,7 +46,6 @@ ol {
   align-items: center;
   padding-right: 70px;
 }
-
 .logo {
   position: absolute;
   width: 140px;
@@ -63,12 +54,9 @@ ol {
   left: 70px;
   display: block;
 }
-
 .navigation-list {
   display: flex;
-
 }
-
 .navigation-link {
   display: block;
   line-height: 62px;
@@ -77,46 +65,35 @@ ol {
   text-decoration: none;
   color: #000000;
   border-bottom: 2px solid transparent;
-
 }
-
 .navigation-link:hover {
   border-color: #756257;
 }
-
 .navigation-item {
   margin-right: 32px;
 }
-
 .navigation-item:last-child {
   margin-right: 0;
 }
-
 .extra {
   margin-left: auto;
   display: flex;
   align-items: center;
-
 }
-
 .extra-icons {
   display: flex;
   margin-right: 20px;
 }
-
 .extra-icons-item {
   margin-right: 24px;
 }
-
 .extra-icons-item:last-child {
   margin-right: 0;
 }
-
 .icon-link {
   display: block;
   width: 22px;
 }
-
 .button-link {
   width: 160px;
   height: 36px;
@@ -126,52 +103,42 @@ ol {
   font-size: 16px;
   color: #FFFFFF;
   text-transform: uppercase;
-
-
+}
 .hero {
-
   background-image: url("../img/background_hero.png");
-
-
+  width: 1200px;
+height: 485px;
 }
-
 .img-hero {
-  margin: 51px 371px 82px 371px;
+  width: 458px;
+  height: 352px;
+  margin-left: auto;
+  margin-right: auto;
 }
-
-.hero-descript {
+.descript {
   width: 1200px;
   height: 261px;
 }
-
-.advantage {
-  width: 1200px;
-  height: 261px;
-}
-
-.hero-description {
+.description {
+  padding-top: 69px;
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
+  padding-left: 290px;
+  padding-right: 290px;
   text-align: center;
   text-transform: uppercase;
-  font-family: 'PT Sans', sans-serif;
-
-
 }
+.reasons {
 
-.hero-reasons {
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
   line-height: 26px;
   text-align: center;
-
 }
-
 .advantages {}
 
 .advantages-list {
-  display: flex;
-  justify-content: space-between;
+
 }
