--- a/styles/styles.css
+++ b/styles/styles.css
@@ -277,36 +277,51 @@ ol {
   text-align: center;
   color: #FFFFFF;
 }
-
+.subscribe-form{
+display: flex;
+justify-content: center;
+}
+.subscribe-input{
+display: block;
+width: 452px;
+height: 48px;
+background: #F2F2F2;
+font-size: 18px;
+line-height: 24px;
+align-items: center;
+padding-left: 20px;
+}
 .subscribe-button {
   width: 232px;
   height: 52px;
   font-weight: 700;
-font-size: 20px;
-line-height: 36px;
+  font-size: 20px;
+  line-height: 36px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background: #82B3D3;
 
-align-items: center;
-text-align: center;
-text-transform: uppercase;
-color: #FFFFFF;
-background: #82B3D3;
-border-radius: 0px 4px 4px 0px;
 }
-.page-footer{
+
+.page-footer {
   display: flex;
   align-items: center;
   height: 120px;
-  justify-content:space-between;
+  justify-content: space-between;
 }
-.footer-social-list{
+
+.footer-social-list {
   display: flex;
-margin-left: 70px;
+  margin-left: 70px;
 }
-.img-social{
-width: 20px;
-height: 16px;
+
+.img-social {
+  width: 20px;
+  height: 16px;
 }
-.phone{
+
+.phone {
   font-weight: 400;
   font-size: 40px;
   line-height: 40px;
@@ -315,7 +330,149 @@ height: 16px;
   text-decoration: none;
   color: #000000;
 }
-.phone:hover{
+
+.phone:hover {
   color: blue;
 }
+
 /* >.img-academy{ }*/
+
+/* ниже стилизация catalog.html  */
+
+.inner-header {
+  background-image: url("../img/background-catalog.png");
+}
+
+.inner-header-title {
+  font-weight: 700;
+  font-size: 60px;
+  line-height: 78px;
+  color: #FFFFFF;
+}
+
+.breadcrumbs-link {
+  font-size: 16px;
+  line-height: 21px;
+
+  color: #FFFFFF;
+}
+
+.catalog-filter-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.control {
+  font-size: 18px;
+  line-height: 23px;
+}
+
+.button-apply {
+  width: 191px;
+  height: 36px;
+  background: #82B3D3;
+  border-radius: 4px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+
+.button-reset {
+  width: 191px;
+  height: 36px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.catalog-sorting-subtitle {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+  color: #000000;
+}
+
+.select-control {
+
+  width: 292px;
+  height: 49px;
+  border: 2px solid #E5E5E5;
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 21px;
+  color: #333333;
+}
+
+.hotels-card {}
+
+.card-item-title {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+}
+
+.hotels-card-type {
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.hotels-card-price {
+  font-size: 18px;
+  line-height: 21px;
+  text-align: right;
+}
+
+.rate {
+  width: 140px;
+height: 37px;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  background: #F2F2F2;
+  border-radius: 4px;
+}
+.pagination{
+  display: flex;
+flex-direction: row;
+column-gap: 8px;
+align-items: center;
+padding: 0px;
+
+width: 1060px;
+height: 60px;
+}
+.pagination-item{
+  width: 60px;
+  height: 60px;
+  background: #82B3D3;
+border-radius: 4px;
+align-items: center;
+}
+.pagination-item:nth-child(1){
+  width: 60px;
+  height: 60px;
+  background: #F2F2F2;
+border-radius: 4px;
+align-items: center;
+}
+.pagination-link .pagination-current{
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+  align-items: center;
+  color: #000000;
+}
+.pagination-link{
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+  align-items: center;
+
+  color: #FFFFFF;
+}
