--- a/styles/styles.css
+++ b/styles/styles.css
@@ -121,6 +121,7 @@ ol {
   font-size: 16px;
   color: #FFFFFF;
   text-transform: uppercase;
+  border: none;
 }
 
 .hero {
@@ -242,7 +243,9 @@ ol {
   text-align: center;
 }
 
-.search-catalog-button {
+.search-catalog {
+  display: block;
+justify-self: center ;
   width: 376px;
   height: 52px;
   background: #756157;
@@ -250,10 +253,14 @@ ol {
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
-  align-items: center;
+  text-decoration: none;
   text-align: center;
   text-transform: uppercase;
   color: #FFFFFF;
+  padding-top: 8px;
+  margin-left: auto;
+  margin-right: auto;
+
 }
 
 .subscribe {
@@ -277,20 +284,25 @@ ol {
   text-align: center;
   color: #FFFFFF;
 }
-.subscribe-form{
-display: flex;
-justify-content: center;
+
+.subscribe-form {
+  display: flex;
+  justify-content: center;
 }
-.subscribe-input{
-display: block;
-width: 452px;
-height: 48px;
-background: #F2F2F2;
-font-size: 18px;
-line-height: 24px;
-align-items: center;
-padding-left: 20px;
+
+.subscribe-input {
+  display: block;
+  width: 452px;
+  height: 50px;
+  background: #F2F2F2;
+  font-size: 18px;
+  line-height: 24px;
+  align-items: center;
+  padding-left: 20px;
+  border-radius: 4px 0px 0px 4px;
+  border: none;
 }
+
 .subscribe-button {
   width: 232px;
   height: 52px;
@@ -301,6 +313,8 @@ padding-left: 20px;
   text-transform: uppercase;
   color: #FFFFFF;
   background: #82B3D3;
+  border-radius: 0px 4px 4px 0px;
+  border: none;
 
 }
 
@@ -429,7 +443,7 @@ padding-left: 20px;
 
 .rate {
   width: 140px;
-height: 37px;
+  height: 37px;
   font-size: 16px;
   line-height: 20px;
   text-align: center;
@@ -437,38 +451,43 @@ height: 37px;
   background: #F2F2F2;
   border-radius: 4px;
 }
-.pagination{
-  display: flex;
-flex-direction: row;
-column-gap: 8px;
-align-items: center;
-padding: 0px;
 
-width: 1060px;
-height: 60px;
+.pagination {
+  display: flex;
+  flex-direction: row;
+  column-gap: 8px;
+  align-items: center;
+  padding: 0px;
+
+  width: 1060px;
+  height: 60px;
 }
-.pagination-item{
+
+.pagination-item {
   width: 60px;
   height: 60px;
   background: #82B3D3;
-border-radius: 4px;
-align-items: center;
+  border-radius: 4px;
+  align-items: center;
 }
-.pagination-item:nth-child(1){
+
+.pagination-item:nth-child(1) {
   width: 60px;
   height: 60px;
   background: #F2F2F2;
-border-radius: 4px;
-align-items: center;
+  border-radius: 4px;
+  align-items: center;
 }
-.pagination-link .pagination-current{
+
+.pagination-link .pagination-current {
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
   align-items: center;
   color: #000000;
 }
-.pagination-link{
+
+.pagination-link {
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
