--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,11 +22,9 @@ body {
   background-color: #F2F2F2;
 }
 
-ul,
-ol {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+.visually-hidden {
+  position: fixed;
+  transform: scale(0);
 }
 
 .img {
@@ -51,6 +49,7 @@ ol {
   display: flex;
   align-items: center;
   padding-right: 70px;
+  color: #000000;
 }
 
 .logo {
@@ -64,6 +63,9 @@ ol {
 
 .navigation-list {
   display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .navigation-link {
@@ -122,12 +124,16 @@ ol {
   color: #FFFFFF;
   text-transform: uppercase;
   border: none;
+  font-family: "PT Sans", sans-serif;
 }
+
 
 .hero {
   background-image: url("../img/background_hero.png");
-  width: 1200px;
+  width: 100%;
   height: 485px;
+  background-size: 100%;
+  background-repeat: no-repeat;
 }
 
 .img-hero {
@@ -135,6 +141,8 @@ ol {
   height: 352px;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 51px;
+
 }
 
 .descript {
@@ -162,14 +170,18 @@ ol {
   text-align: center;
 }
 
-.advantages-title-right {
-  font-size: 24px;
-  line-height: 28px;
-  text-align: center;
+
+.advantages-photo-right {
+  display: flex;
+  color: #FFFFFF;
+}
+
+.advantages-item-right {
+  background: #82B3D3;
 
 }
 
-.advantages-title-left {
+.advantages-title-right {
   font-size: 24px;
   line-height: 28px;
   text-align: center;
@@ -181,22 +193,63 @@ ol {
   text-align: center;
 }
 
+.advantages-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.advantages-list-item {
+  width: 400px;
+  height: 385px;
+
+}
+
+.advantages-title {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.advantages-photo-left {
+  display: flex;
+  color: #FFFFFF;
+}
+
+.advantages-item-left {
+  background: #82B3D3;
+}
+
+.advantages-title-left {
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+}
+
 .advantages-description-left {
   font-size: 18px;
   line-height: 21px;
   text-align: center;
 }
 
-.advantages-title {
-  font-size: 24px;
-  line-height: 28px;
-  text-align: center;
-}
 
 .advantages-description {
   font-size: 18px;
   line-height: 21px;
   text-align: center;
+}
+
+.servise-list-card {
+  display: flex;
+}
+
+
+.img-service {
+  width: auto;
+  margin: auto;
 }
 
 .servise-title {
@@ -206,6 +259,22 @@ ol {
   text-align: center;
   text-transform: uppercase;
   color: #000000;
+  margin-bottom: 20px;
+  margin-top: 64px;
+}
+
+.servise-list-card {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+}
+
+.service-item-card {
+
+  width: 400px;
+  height: 385px;
+  background: rgba(131, 179, 211, 0.12);
 }
 
 .servise-description {
@@ -213,6 +282,7 @@ ol {
   line-height: 26px;
   text-align: center;
   color: #333333;
+  margin-bottom: 64px;
 }
 
 .servise-list-card-title {
@@ -245,7 +315,7 @@ ol {
 
 .search-catalog {
   display: block;
-justify-self: center ;
+  justify-self: center;
   width: 376px;
   height: 52px;
   background: #756157;
@@ -327,7 +397,11 @@ justify-self: center ;
 
 .footer-social-list {
   display: flex;
+  justify-content: space-between;
   margin-left: 70px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .img-social {
@@ -353,6 +427,7 @@ justify-self: center ;
 
 /* ниже стилизация catalog.html  */
 
+
 .inner-header {
   background-image: url("../img/background-catalog.png");
 }
@@ -363,11 +438,15 @@ justify-self: center ;
   line-height: 78px;
   color: #FFFFFF;
 }
+.breadcrumbs {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 
 .breadcrumbs-link {
-  font-size: 16px;
   line-height: 21px;
-
   color: #FFFFFF;
 }
 
@@ -375,6 +454,12 @@ justify-self: center ;
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
+}
+
+.catalog-filter-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .control {
@@ -424,6 +509,12 @@ justify-self: center ;
 
 .hotels-card {}
 
+.hotels-card-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 .card-item-title {
   font-weight: 700;
   font-size: 24px;
@@ -444,7 +535,7 @@ justify-self: center ;
 .rate {
   width: 140px;
   height: 37px;
-  font-size: 16px;
+
   line-height: 20px;
   text-align: center;
   text-transform: uppercase;
@@ -457,41 +548,30 @@ justify-self: center ;
   flex-direction: row;
   column-gap: 8px;
   align-items: center;
-  padding: 0px;
-
   width: 1060px;
   height: 60px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-.pagination-item {
+
+.pagination-link {
+  display: block;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 60px;
+  text-align: center;
+  text-decoration: none;
+  color: #FFFFFF;
   width: 60px;
   height: 60px;
   background: #82B3D3;
   border-radius: 4px;
-  align-items: center;
+
 }
 
-.pagination-item:nth-child(1) {
-  width: 60px;
-  height: 60px;
+.pagination-current {
   background: #F2F2F2;
-  border-radius: 4px;
-  align-items: center;
-}
-
-.pagination-link .pagination-current {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 36px;
-  align-items: center;
   color: #000000;
-}
-
-.pagination-link {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 36px;
-  align-items: center;
-
-  color: #FFFFFF;
 }
