--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,10 @@
   font-display: swap;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   font-family: "PT Sans", sans-serif;
   margin: 0;
@@ -22,14 +26,17 @@ body {
   background-color: #F2F2F2;
   height: 100%;
 }
-main{
-  flex-grow: 1;
-}
 
 
 .visually-hidden {
-  position: fixed;
-  transform: scale(0);
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .img {
@@ -39,6 +46,10 @@ main{
   height: auto;
 }
 
+.main-index {
+  flex-grow: 1;
+}
+
 .container {
   background-color: #FFFFFF;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
@@ -46,14 +57,15 @@ main{
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
- min-height:100%;
- display: flex;
- flex-direction: column;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .page-header {
   position: relative;
-  padding-left: calc(70px + 140px + 28px);
+
   display: flex;
   align-items: center;
   padding-right: 70px;
@@ -71,9 +83,10 @@ main{
 
 .navigation-list {
   display: flex;
-  list-style: none;
+  list-style-type: none;
   margin: 0;
   padding: 0;
+  margin-left: 238px;
 }
 
 .navigation-link {
@@ -142,7 +155,7 @@ main{
 .hero {
   background-image: url("../img/background_hero.png");
   width: 100%;
-  height: 485px;
+  min-height: 485px;
   background-size: 100%;
   background-repeat: no-repeat;
 }
@@ -158,7 +171,7 @@ main{
 
 .descript {
   width: 1200px;
-  height: 261px;
+  min-height: 261px;
 }
 
 .description {
@@ -182,23 +195,30 @@ main{
 }
 
 
-.advantages-photo-right {
+.advantages-first {
   display: flex;
   color: #FFFFFF;
 }
 
-.advantages-item-right {
-  background: #82B3D3;
 
+
+.advantages-item-first {
+  background: #82B3D3;
+  width: 400px;
+  display: block;
+  align-items: auto;
 }
 
-.advantages-title-right {
+.advantages-title-first {
+  font-weight: 700;
   font-size: 24px;
   line-height: 28px;
   text-align: center;
+  text-transform: uppercase;
 }
 
-.advantages-description-right {
+
+.advantages-description-first {
   font-size: 18px;
   line-height: 21px;
   text-align: center;
@@ -213,8 +233,11 @@ main{
 
 .advantages-list-item {
   width: 400px;
-  height: 385px;
-
+  min-height: 385px;
+  background: rgba(131, 179, 211, 0.12);ground: rgba(131, 179, 211, 0.12);
+}
+.advantages-list-item:nth-child(2){
+  background: rgba(131, 179, 211, 0.2);
 }
 
 .advantages-title {
@@ -225,22 +248,29 @@ main{
   text-transform: uppercase;
 }
 
-.advantages-photo-left {
+.advantages-last {
   display: flex;
   color: #FFFFFF;
+  flex-direction: row-reverse;
 }
 
-.advantages-item-left {
+.advantages-item-last {
   background: #82B3D3;
+  width: 400px;
 }
 
-.advantages-title-left {
+.advantages-title-last {
+  font-weight: 700;
   font-size: 24px;
   line-height: 28px;
   text-align: center;
+  text-transform: uppercase;
+  margin: 102px 85x 102px 85px;
 }
 
-.advantages-description-left {
+
+
+.advantages-description-last {
   font-size: 18px;
   line-height: 21px;
   text-align: center;
@@ -251,6 +281,13 @@ main{
   font-size: 18px;
   line-height: 21px;
   text-align: center;
+}
+
+.advantages-title-divider {
+  width: 60px;
+  height: 2px;
+  background: rgba(0, 0, 0, 0.3);
+  border: none;
 }
 
 .servise-list-card {
@@ -284,7 +321,7 @@ main{
 .service-item-card {
 
   width: 400px;
-  height: 385px;
+  min-height: 385px;
   background: rgba(131, 179, 211, 0.12);
 }
 
@@ -346,7 +383,7 @@ main{
 
 .subscribe {
   width: 1200px;
-  height: 415px;
+  min-height: 415px;
   background-image: url(../img/Subscribe.png);
 }
 
@@ -402,7 +439,7 @@ main{
 .page-footer {
   display: flex;
   align-items: center;
-  height: 120px;
+  min-height: 120px;
   justify-content: space-between;
 }
 
@@ -438,9 +475,15 @@ main{
 
 /* ниже стилизация catalog.html  */
 
+.main-inner {
+  flex-grow: 1;
+}
 
-.inner-header {
+
+.inner_header {
   background-image: url("../img/background-catalog.png");
+  background-repeat: no-repeat;
+
 }
 
 .inner-header-title {
@@ -449,9 +492,10 @@ main{
   line-height: 78px;
   color: #FFFFFF;
 }
+
 .breadcrumbs {
   display: flex;
-  list-style: none;
+  list-style-type: none;
   margin: 0;
   padding: 0;
 }
@@ -462,7 +506,8 @@ main{
 }
 
 .catalog-filter{
-display: flex;
+  display: flex;
+
 
 }
 
@@ -504,7 +549,7 @@ display: flex;
   line-height: 20px;
 }
 
-.catalog-sorting{
+.catalog-sorting {
   display: flex;
 }
 
