--- a/styles/styles.css
+++ b/styles/styles.css
@@ -652,7 +652,7 @@ body {
   list-style: none;
   margin: 40px 70px 60px 70px;
   padding: 0;
-list-style-type: none;
+  list-style-type: none;
 }
 
 
@@ -674,4 +674,18 @@ list-style-type: none;
 .pagination-current {
   background: #F2F2F2;
   color: #000000;
+}
+.subscribe-title-catalog{
+  color: #000000;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+  text-align: center;
+}
+.subscribe-description-catalog{
+  color: #000000;
+  font-size: 22px;
+  line-height: 26px;
+  text-align: center;
 }
