--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,14 +19,13 @@ html {
 }
 
 body {
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans";
   margin: 0;
   font-size: 16px;
   line-height: 24px;
   background-color: #F2F2F2;
   height: 100%;
 }
-
 
 .visually-hidden {
   position: absolute;
@@ -121,8 +120,6 @@ body {
   display: flex;
   margin-right: 20px;
   list-style: none;
-
-
 }
 
 .extra-icons-item {
@@ -136,9 +133,27 @@ body {
 .icon-link {
   display: block;
   width: 22px;
+  position: relative;
+  text-decoration: none;
+}
+
+.icon-link-badge {
+  display: block;
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
+  text-align: center;
+  color: #FFFFFF;
+  border-radius: 50%;
+  background: #7DB54F;
+  font-size: 10px;
+  position: absolute;
+  top: -11px;
+  right: -8px;
 }
 
 .button-link {
+  display: inline-block;
   width: 160px;
   height: 36px;
   background-color: #756157;
@@ -151,6 +166,18 @@ body {
   font-family: "PT Sans", sans-serif;
 }
 
+.button-link:hover {
+  background-color: #615048;
+}
+
+.button-link:active {
+  background-color: #756157;
+  color: ;
+}
+
+.button-link:focus {
+  background-color: #615048;
+}
 
 .hero {
   background-image: url("../img/background_hero.png");
@@ -166,12 +193,12 @@ body {
   margin-left: auto;
   margin-right: auto;
   padding-top: 51px;
-
 }
 
 .descript {
   width: 1200px;
   min-height: 261px;
+  margin-bottom: 21px;
 }
 
 .description {
@@ -179,10 +206,10 @@ body {
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
-  padding-left: 290px;
-  padding-right: 290px;
+  padding: 69px 290px 25px;
   text-align: center;
   text-transform: uppercase;
+  margin: 0;
 }
 
 .reasons {
@@ -191,20 +218,25 @@ body {
   font-size: 22px;
   line-height: 26px;
   text-align: center;
+  margin: 0;
 }
 
-.advantages-first {
+.advantage {
   display: flex;
   color: #FFFFFF;
 }
 
-.advantages-item-first {
+.advantage--last {
+  flex-direction: row-reverse;
+}
+
+.advantage-content {
   background: #82B3D3;
   width: 400px;
   margin: 102px 85x 102px 85px;
 }
 
-.advantages-item-conteiner {
+.advantage-conteiner {
   width: 230px;
   min-height: 200px;
   display: flex;
@@ -214,14 +246,7 @@ body {
   padding: 90px 85px;
 }
 
-.advantages-photo-first {
-  background-image: url("../img/house_and_rock.jpg");
-  width: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.advantages-title-first {
+.advantage-title {
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
@@ -229,8 +254,38 @@ body {
   text-transform: uppercase;
 }
 
+.advantage-divider {
+  width: 60px;
+  height: 2px;
+  background: rgba(0, 0, 0, 0.3);
+  border: none;
+}
 
-.advantages-description-first {
+.advantage .advantage-divider {
+  background: rgba(255, 255, 255, 0.30);
+
+}
+
+.advantage-photo {
+  background-image: url("../img/house_and_rock.jpg");
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.advantage--last .advantage-photo {
+  background-image: url("../img/the_devil's_bridge.jpg");
+}
+
+.advantage-title {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.advantage-description {
   font-size: 18px;
   line-height: 21px;
   text-align: center;
@@ -247,78 +302,13 @@ body {
   width: 400px;
   min-height: 385px;
   background: rgba(131, 179, 211, 0.12);
-
 }
 
 .advantages-list-item:nth-child(2) {
   background: rgba(131, 179, 211, 0.2);
 }
 
-.advantages-title {
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 28px;
-  text-align: center;
-  text-transform: uppercase;
-
-}
-
-.advantages-last {
-  display: flex;
-  color: #FFFFFF;
-  flex-direction: row-reverse;
-}
-
-
-
-.advantages-item-last {
-  background: #82B3D3;
-  width: 400px;
-}
-
-.advantages-title-last {
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 28px;
-  text-align: center;
-  text-transform: uppercase;
-
-}
-
-
-
-.advantages-description-last {
-  font-size: 18px;
-  line-height: 21px;
-  text-align: center;
-}
-
-
-.advantages-description {
-  font-size: 18px;
-  line-height: 21px;
-  text-align: center;
-}
-
-.advantages-title-divider {
-  width: 60px;
-  height: 2px;
-  background: rgba(0, 0, 0, 0.3);
-  border: none;
-}
-
-.advantages-photo-last {
-  background-image: url("../img/the_devil's_bridge.jpg");
-  width: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.servise-title {
-  margin: 0 300px;
-}
-
-.servise-list {
+.service-list {
   display: flex;
   list-style: none;
   margin: 0;
@@ -331,7 +321,7 @@ body {
   margin: auto;
 }
 
-.servise-title {
+.heading {
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
@@ -342,31 +332,28 @@ body {
   margin-top: 64px;
 }
 
-.servise-list-card {
+.descriptions {
+  font-size: 22px;
+  line-height: 26px;
+  text-align: center;
+  color: #333333;
+  margin-bottom: 64px;
+}
+
+.service-list {
   list-style: none;
   margin: 0;
   padding: 0;
-
 }
 
 .service-item {
   width: 400px;
   min-height: 385px;
   background: rgba(131, 179, 211, 0.12);
-
 }
 
 .service-item:nth-child(2) {
   background: none;
-}
-
-
-.servise-description {
-  font-size: 22px;
-  line-height: 26px;
-  text-align: center;
-  color: #333333;
-  margin-bottom: 64px;
 }
 
 .service-item {
@@ -379,7 +366,7 @@ body {
   max-width: 230px;
 }
 
-.servise-list-title {
+.service-list-title {
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
@@ -387,33 +374,16 @@ body {
   text-transform: uppercase;
 }
 
-.servise-list-description {
+.service-list-description {
   font-size: 18px;
   line-height: 21px;
-
   text-align: center;
 }
 
 .search {
   padding: 96px 304px;
+  margin: 0;
 }
-
-.search-title {
-  font-weight: 700;
-  font-size: 30px;
-  line-height: 36px;
-  text-align: center;
-  text-transform: uppercase;
-}
-
-.search-description {
-  font-size: 22px;
-  line-height: 26px;
-  text-align: center;
-  margin-bottom: 54px;
-  color: var(--texts-second, #333);
-}
-
 
 .search-catalog {
   display: flex;
@@ -433,7 +403,19 @@ body {
   padding: 0 50px;
   margin-left: auto;
   margin-right: auto;
+}
 
+.search-catalog:hover {
+  background-color: #615048;
+}
+
+.search-catalog:active {
+  background-color: #756157;
+  color: ;
+}
+
+.search-catalog:focus {
+  background-color: #615048;
 }
 
 .subscribe {
@@ -442,29 +424,22 @@ body {
   background-image: url(../img/Subscribe.png);
 }
 
-.subscribe-title {
-  font-weight: 700;
-  font-size: 30px;
-  line-height: 36px;
-  text-transform: uppercase;
-  text-align: center;
+.subscribe .heading {
   color: #FFFFFF;
-  padding-top: 96px;
+  margin: 0;
+  padding: 96px 0 20px 0;
 }
 
-
-.subscribe-description {
-  font-size: 22px;
-  line-height: 26px;
-  text-align: center;
+.subscribe .descriptions {
+  margin: 0;
   color: #FFFFFF;
-
 }
 
 .subscribe-form {
   display: flex;
   justify-content: center;
-  padding-top: 54px;
+  margin-top: 54px;
+  margin-bottom: 104px;
 }
 
 .subscribe-input {
@@ -490,9 +465,20 @@ body {
   text-transform: uppercase;
   color: #FFFFFF;
   background: #82B3D3;
-  border-radius: 0px 4px 4px 0px;
+  border-radius: 0 4px 4px 0;
   border: none;
+}
 
+.subscribe-button:hover {
+  background-color: #68A2CA;
+}
+
+.subscribe-button:active{
+  background-color: #82B3D3;
+}
+
+.subscribe-button:hover {
+  background-color: #68A2CA;
 }
 
 .page-footer {
@@ -532,7 +518,6 @@ body {
   color: blue;
 }
 
-
 .academy {
   margin-right: 70px;
 }
@@ -543,10 +528,9 @@ body {
   flex-grow: 1;
 }
 
-
 .inner_header {
   background-image: url("../img/background-catalog.png");
-  background-size:cover;
+  background-size: cover;
   padding-top: 35px;
   padding-left: 70px;
   min-height: 412px;
@@ -569,11 +553,24 @@ body {
   margin: 0 946px 40px 0;
 }
 
+.breadcrumbs-home {
+  display: block;
+  height: 12px;
+  width: 12px;
+  background-image: url(../img/catalog-breadcrum/catalog_breadcrum.svg);
+}
+
+.breadcrumbs-arrow {
+  display: block;
+  width: 6px;
+  height: 10px;
+  background-image: url(../img/catalog-breadcrum/Vector.svg);
+}
+
 .breadcrumbs-link {
   line-height: 21px;
   color: #FFFFFF;
 }
-
 
 .catalog-filter-form {
   display: flex;
@@ -581,13 +578,21 @@ body {
 
 .catalog-filter-group {
   padding: 0;
+  margin-right: 70px;
+  border: none;
+}
 
+.catalog-filter-group:nth-child(2) {
+  padding: 0;
+  margin-right: auto;
 }
 
 .catalog-filter-title {
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
+  color: #FFFFFF;
+  margin-bottom: 32px;
 }
 
 .catalog-filter-list {
@@ -599,11 +604,62 @@ body {
 .control {
   font-size: 18px;
   line-height: 23px;
+  color: #FFFFFF;
+}
+
+.catalog-filter-item {
+  margin-bottom: 16px;
+}
+
+.catalog-filter-prise {
+  width: 288px;
+  border: none;
+}
+
+.prices {
+  display: flex;
+  column-gap: 2px;
+}
+
+.price {
+  position: relative;
+}
+
+.input-price {
+  display: block;
+  width: 143px;
+  height: 48px;
+  padding: 0;
+  font-size: 18px;
+  font-family: PT Sans;
+  font-style: normal;
+  font-weight: 700;
+  border: none;
+  border-radius: 4px 0 0 4px;
+  padding-left: 20px;
+}
+
+.price:last-child .input-price {
+  border-radius: 0 4px 4px 0;
+}
+
+.input-price-label {
+  position: absolute;
+  font-size: 18px;
+  font-family: PT Sans;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  color: #A9A9A9;
+  top: 12px;
+  right: 20px;
+  pointer-events: none;
 }
 
 .catalog-filter-buttons {
   display: flex;
   flex-direction: column;
+  margin-right: 70px;
 }
 
 .button-apply {
@@ -618,9 +674,20 @@ body {
   text-transform: uppercase;
   color: #FFFFFF;
   font-family: "PT Sans", sans-serif;
-
+  margin-top: 56px;
+  margin-bottom: 32px;
+}
+.button-apply:hover {
+  background-color: #68A2CA;
 }
 
+.button-apply:active{
+  background-color: #82B3D3;
+}
+
+.button-apply:hover {
+  background-color: #68A2CA;
+}
 .button-reset {
   width: 191px;
   height: 36px;
@@ -633,15 +700,22 @@ body {
   background: none;
   border: none;
   font-family: "PT Sans", sans-serif;
+}
+.button-reset:hover{
 
 }
+.button-reset:active{
 
+}
+.button-reset:focus{
+  border: 3px solid #83B3D3;
+}
 .catalog-sorting {
   display: flex;
   align-items: center;
   justify-content: space-between;
-
-
+  margin-bottom: 40px;
+  margin-right: 70px;
 }
 
 .catalog-sorting-subtitle {
@@ -654,7 +728,6 @@ body {
 }
 
 .select-control {
-
   width: 292px;
   height: 49px;
   font-family: "PT Sans", sans-serif;
@@ -674,37 +747,33 @@ body {
 }
 
 .view {
-  display: block;
-  padding: 14px 12px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   margin-right: 8px;
+  width: 48px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+}
 
+.view img {
+  width: 16px;
+  height: 14px;
 }
 
 .view:hover {
-  border-radius: 4px;
-  border: 2px solid var(--icons-basic, #000)
+  outline: 2px solid #000000;
 }
 
-view:nth-child(3) {
-  margin-right: 70px;
-}
-
-
-.hotels{
-  padding-left: 70px;
-}
 .hotels-list {
-
   list-style: none;
   margin: 0;
   padding: 0;
   display: grid;
   grid-template-columns: repeat(3, 340px);
-  gap:20px;
-
+  gap: 20px;
+  margin-left: 70px;
+  margin-bottom: 40px;
 }
 
 .hotels-item {
@@ -713,14 +782,13 @@ view:nth-child(3) {
   border: 1px solid #E6E6E6;
   display: grid;
   grid-template-columns: repeat(2, 140px);
-  gap:16px 20px;
-
+  gap: 16px 20px;
 }
-.hotel-image{
 
-
+.hotel-image {
   grid-column: 2 span;
 }
+
 .hotel-title {
   display: grid;
   font-weight: 700;
@@ -730,19 +798,18 @@ view:nth-child(3) {
   text-decoration: none;
   grid-column: 2 span;
   margin: 0;
-
 }
 
 .hotels-type {
   font-size: 18px;
   line-height: 21px;
-  color: var(--texts-second, #333);
+  color: #333333;
 }
 
 .hotels-price {
   font-size: 18px;
   line-height: 21px;
-  color: var(--texts-second, #333);
+  color: #333333;
   text-align: right;
 }
 
@@ -755,23 +822,22 @@ view:nth-child(3) {
   font-weight: 700;
   line-height: 20px;
   text-transform: uppercase;
-  color: var(--texts-background-deafault, #FFF);
+  color: #FFFFFF;
   text-align: center;
   border-radius: 4px;
-  background: var(--buttons-basic, #756157);
+  background: #756157;
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
 
 .favorites-button {
   width: 140px;
   height: 36px;
   border-radius: 4px;
-  background: var(--buttons-second, #82B3D3);
+  background: #82B3D3;
   border: none;
-  color: var(--texts-background-deafault, #FFF);
+  color: #FFFFFF;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -801,6 +867,13 @@ view:nth-child(3) {
   margin: 0;
 }
 
+.hotel-divider {
+  margin: 0;
+  width: 1060px;
+  background: #E6E6E6;
+  margin-left: 70px;
+}
+
 .pagination {
   display: flex;
   flex-wrap: wrap;
@@ -809,11 +882,10 @@ view:nth-child(3) {
   width: 1060px;
   height: 60px;
   list-style: none;
-  margin: 40px 70px 60px 70px;
+  margin: 40px 70px 156px 70px;
   padding: 0;
   list-style-type: none;
 }
-
 
 .pagination-link {
   display: block;
@@ -827,7 +899,6 @@ view:nth-child(3) {
   height: 60px;
   background: #82B3D3;
   border-radius: 4px;
-
 }
 
 .pagination-current {
@@ -835,18 +906,12 @@ view:nth-child(3) {
   color: #000000;
 }
 
-.subscribe-title-catalog {
+.subscribe-catalog .heading {
   color: #000000;
-  font-weight: 700;
-  font-size: 30px;
-  line-height: 36px;
-  text-transform: uppercase;
-  text-align: center;
+  margin-bottom: 20px;
 }
 
-.subscribe-description-catalog {
-  color: #000000;
-  font-size: 22px;
-  line-height: 26px;
-  text-align: center;
+.subscribe-catalog .descriptions {
+  color: #333333;
+  margin: 0;
 }
