Заменяет иконки с img на svg

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,7 +39,7 @@ body {
 }
 
 .img {
-  display: block;
+
   width: 100%;
   max-width: 100%;
   height: auto;
@@ -126,6 +126,7 @@ body {
   margin-right: 24px;
   position: relative;
 }
+
 .extra-icons-item:last-child {
   margin-right: 0;
 }
@@ -135,15 +136,11 @@ body {
   width: 22px;
   height: 22px;
   text-decoration: none;
-  background-size: 20px 20px;
-  background-position: center center;
-  background-repeat: no-repeat;
 }
-.icon-link-search {
-  background-image: url("../img/search.svg");
-}
-.icon-link-likes {
-  background-image: url("../img/heart.svg");
+
+.icon-link:hover path,
+.icon-link:focus path {
+  fill: #606060;
 }
 
 .icon-link-badge {
@@ -170,6 +167,7 @@ body {
 }
 
 .img-hero {
+  display: block;
   width: 458px;
   height: 352px;
   margin-left: auto;
@@ -273,10 +271,12 @@ body {
   text-align: center;
   color: #333;
 }
-.advantage--first .advantage-description  {
+
+.advantage--first .advantage-description {
   color: #FFFFFF;
 }
-.advantage--last .advantage-description  {
+
+.advantage--last .advantage-description {
   color: #FFFFFF;
 }
 
@@ -414,38 +414,6 @@ body {
   margin: 0;
 }
 
-.search-catalog {
-  padding: 0;
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 376px;
-  height: 52px;
-  background: #756157;
-  border-radius: 4px;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 36px;
-  text-decoration: none;
-  text-align: center;
-  text-transform: uppercase;
-  color: #FFFFFF;
-}
-
-.search-catalog:hover {
-  background-color: #615048;
-}
-
-.search-catalog:active {
-  background-color: #756157;
-}
-
-.search-catalog:focus {
-  background-color: #615048;
-}
-
 .subscribe {
   width: 1200px;
   min-height: 415px;
@@ -483,19 +451,6 @@ body {
   border-radius: 4px 0 0 4px;
   border: none;
 }
-
-.subscribe-button:hover {
-  background-color: #68A2CA;
-}
-
-.subscribe-button:active {
-  background-color: #82B3D3;
-}
-
-.subscribe-button:hover {
-  background-color: #68A2CA;
-}
-
 .page-footer {
   padding-top: 44px;
   padding-bottom: 30px;
@@ -516,11 +471,27 @@ body {
   display: flex;
   width: 46px;
   height: 40px;
+  fill: #615048;
 }
-.socials-item-vk, .socials-item-tg, .socials-item-yt{
+
+.socials-item-vk,
+.socials-item-tg,
+.socials-item-yt {
   align-self: center;
   margin-left: auto;
   margin-right: auto;
+  fill: #615048;
+}
+
+.socials-item:hover path,
+.socials-item:focus path {
+  fill: #68A2CA;
+}
+
+.socials-item:hover path,
+.socials-item:focus path {
+  fill: #d2e3ef;
+
 }
 
 .phone {
@@ -533,22 +504,28 @@ body {
   color: #000000;
 }
 
-.phone:hover, .phone:focus {
+.phone:hover,
+.phone:focus {
   color: #756157;
 }
-.phone:active{
+
+.phone:active {
   color: rgba(117, 97, 87, 0.30);
 }
 
 .academy {
   margin-right: 70px;
 }
-.academy:hover, .academy :focus {
-  color: #756157;
+
+.academy:hover path,
+.academy:focus path {
+  fill: #756157;
 }
-.academy:active{
+
+.academy:active {
   color: rgba(117, 97, 87, 0.30);
 }
+
 /* ниже стилизация catalog.html  */
 
 .main-inner {
@@ -587,7 +564,7 @@ body {
 }
 
 .breadcrumbs-item {
-  margin-right: 10px;s
+  margin-right: 10px;
   position: relative;
 }
 
@@ -646,10 +623,12 @@ body {
   cursor: pointer;
   user-select: none;
 }
+
 .control-input {
   margin: 0;
   margin-right: 16px;
 }
+
 .control-input[type="checkbox"] {
   border-radius: 4px;
   background-color: #FFFFFF;
@@ -658,9 +637,11 @@ body {
   height: 20px;
   cursor: pointer;
 }
+
 .control-input[type="checkbox"]:checked {
   background-image: url(../img/catalog-filter/control=checkbox.png);
 }
+
 .control-input[type="radio"] {
   border-radius: 50%;
   background-color: #FFFFFF;
@@ -669,8 +650,12 @@ body {
   height: 20px;
   cursor: pointer;
 }
+
 .control-input[type="radio"]:checked {
   background-image: url(../img/catalog-filter/control=radio.png);
+}
+.control-input:hover{
+  opacity: 1;
 }
 .catalog-filter-item {
   margin-bottom: 16px;
@@ -791,6 +776,7 @@ body {
   width: 292px;
   position: relative;
 }
+
 .select-control {
   width: 100%;
   height: 49px;
@@ -804,6 +790,7 @@ body {
   padding: 0 20px;
   appearance: none;
 }
+
 .catalog-select:after {
   content: '';
   display: block;
@@ -816,7 +803,9 @@ body {
   right: 20px;
   pointer-events: none;
 }
-.select-control:hover, .select-control:focus {
+
+.select-control:hover,
+.select-control:focus {
   border-color: #68A2CA;
 }
 
@@ -1020,6 +1009,9 @@ body {
 }
 
 /* Коричневая кнопка */
+.button-brown .button-big {
+  width: 376px;
+}
 
 .button-brown.button-small {
   width: 160px;
@@ -1062,6 +1054,10 @@ body {
 
 .button-blue.button-small {
   width: 140px;
+}
+
+.button-blue.button-big {
+  width: 577px;
 }
 
 /* Зеленая кнопка */
@@ -1122,5 +1118,101 @@ body {
   display: flex;
   width: 100%;
   height: 100%;
-  background-color: #fff;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+
+
+.modal-auth {
+  position: relative;
+  margin: auto;
+  background-color: #ffffff;
+  width: 717px;
+  box-sizing: border-box;
+  max-height: 576;
+  padding: 64px 70px;
+  border-radius: 30px;
+  background: #FFF;
+  box-shadow: 0 25px 50px 0 rgba(0, 0, 0, 0.15);
+}
+
+
+.modal-close-button {
+  position: absolute;
+  padding: 0;
+  width: 14px;
+  height: 14px;
+  top: 70px;
+  right: 70px;
+  background-color: #ffffff;
+  border: none;
+  background-image: url(../img/modal/Vector.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+}
+
+.modal-content {
+  display: flex;
+  flex-wrap: wrap;
+  width: 577px;
+}
+
+.modal-title {
+  font-family: PT Sans;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 36px;
+  text-transform: uppercase;
+  color: #000000;
+  margin: 0;
+
+}
+
+.chek-in {
+  display: flex;
+}
+
+.modal-label {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  text-transform: capitalize;
+}
+
+.modal-date-field {
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+}
+
+.modal-input {
+  display: flex;
+  padding: 12px 20px;
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
+  border-radius: 4px;
+  background: var(--basic-light, #F2F2F2);
+  width: 400px;
+  height: auto;
+  color: #000;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+  border: none;
+  margin: 0;
+}
+
+.date-state {
+  position: absolute;
+  top: 32px;
+  left: 157px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 21px;
+  color: #FF5757;
+
 }
