--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,7 +19,7 @@ html {
 }
 
 body {
-  font-family: "PT Sans";
+  font-family: "PT Sans",sans-serif;
   margin: 0;
   font-size: 16px;
   line-height: 24px;
@@ -443,7 +443,7 @@ body {
   width: 432px;
   height: 50px;
   background: #F2F2F2;
-  font-family: PT Sans;
+  font-family:"PT Sans",sans-serif;
   font-size: 18px;
   line-height: 24px;
   align-items: center;
@@ -696,7 +696,7 @@ body {
   height: 48px;
   padding: 0;
   font-size: 18px;
-  font-family: PT Sans;
+  font-family: "PT Sans",sans-serif;
   font-style: normal;
   font-weight: 700;
   border: none;
@@ -712,7 +712,7 @@ body {
 .input-price-label {
   position: absolute;
   font-size: 18px;
-  font-family: PT Sans;
+  font-family: "PT Sans",sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
@@ -787,7 +787,7 @@ body {
   font-weight: 400;
   width: 100%;
   height: 49px;
-  font-family: "PT Sans";
+  font-family: "PT Sans",sans-serif;
   border: 2px solid #E5E5E5;
   border-radius: 4px;
   font-size: 18px;
@@ -903,7 +903,7 @@ body {
   grid-column: 2 span;
   margin: 0;
   color: #000;
-  font-family: PT Sans;
+  font-family: "PT Sans",sans-serif;
   font-size: 24px;
   font-style: normal;
   font-weight: 700;
@@ -1031,7 +1031,7 @@ body {
   text-align: center;
   align-items: center;
   justify-content: center;
-  font-family: "PT Sans";
+  font-family: "PT Sans",sans-serif;
   font-size: 20px;
   font-weight: 700;
   line-height: 36px;
@@ -1207,7 +1207,7 @@ body {
 .modal-title {
   margin: 0;
   margin-bottom: 64px;
-  font-family: PT Sans;
+  font-family: "PT Sans",sans-serif;
   font-size: 30px;
   font-style: normal;
   font-weight: 700;
@@ -1244,7 +1244,7 @@ body {
   width: 100%;
   border-radius: 4px;
   background-color: #F2F2F2;
-  font-family: "PT Sans";
+  font-family: "PT Sans",sans-serif;
   color: #000;
   font-size: 18px;
   font-style: normal;
